# aios

./: .gitignore  README.md  focus_watcher.py
agent/: config.py  context_engine.py  decision_engine.py  gpu_observer.py  ipc.py  llm_interface.py  main.py  network_monitor.py  observer.py  power_manager.py  profile_store.py  signal_combiner.py
docs/: architecture.md  config.md  install.md  troubleshooting.md
helper/: Cargo.toml
helper/src/: allowlist.rs  executor.rs  main.rs  protected.rs  verifier.rs
scripts/: benchmark.py  first_run.py  install.sh  network_profile.py  panic.sh  rollback.sh  uninstall.sh  update.sh
systemd/: aios-agent.service  aios-helper.service  aios-watchdog.service
tests/: run_tests.sh  test_context_engine.py  test_decision_engine.py  test_observer.py  test_profile_store.py
ui/: package-lock.json  package.json
ui/src/: app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: commands.rs  lib.rs
ui/src/routes/: +page.svelte
watchdog/: Cargo.toml
watchdog/src/: main.rs
