[package]
name = "aios-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aios-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
nix = { version = "0.27", features = ["process", "signal"] }
subtle = "2"